PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite 8.4.0 Milestone 1
8 October 2018

phodevi: Report vRAM size on GPU model string in GB when over 1GB
pts-core: At run-time also report if test is deprecated/broken
pts-core: Add "node-npm" as an external dependency for Node.js + NPM
phodevi: Drop information reporting support for the long ago Catalyst/fglrx driver stack that hasn't been supported/maintained in many years

Phoronix Test Suite 8.2.0-Rakkestad
11 September 2018

pts-core: Add RequiresDisplay test profile property to indicate if the test profile explicitly requires a monitor / display server to work
pts-core: Add RequiresNetwork test profile property to indicate if the test profile needs a working network connection
pts-core: Add RequiresInternet test profile property to indicate if the test profile needs a working Internet connection
pts-core: Don't install tests where the current run-time checks will fail
phodevi: Improve CPU thread count detection when running under LXC
phodevi: More robust DMI decode ignore value handling
phodevi: Add extra fallback detection for LXC in system-layer

Phoronix Test Suite 8.2.0 Milestone 4
7 September 2018

pts-core: Fix behavior of "Would you like to stop and install these tests now"
pts-core: Add reinstall / re-install aliases to force-install
ob_auto_compare: Default first to trying to do an automated local result comparison
phodevi: Amlogic SoC detection based on meson_cpufreq driver
phodevi: Rockchip SoC fallback detection
phodevi: Embedded ARM Cortex / ARM part model detection
phodevi: Expanded sensor coverage using Intel RAPL

Phoronix Test Suite 8.2.0 Milestone 3
22 August 2018

pts-core: Minor updates to logic for determining how many times to dynamically increase run count on high variance results
pts-core: Show deprecated tests too when running list-all-tests
pts-core: Add DropNoisyResults option if wishing to not save results that have too high of deviation between runs