@@ -1,5 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+pts-core: Allow passing PTS environment variables as arguments to PTS and then just have PTS set them in the environment
+
 Phoronix Test Suite 8.4.0 Milestone 1
 8 October 2018
 
